...
            <ImageView
                android:id="@+id/product_details_image_view"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/product_details_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/add_product_details_to_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_product_to_cart_text"
...
